/*
Messages related to describing the metadata of namespaces and their entities.
*/

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "NamespaceMeta";

package polypheny.protointerface;

/*
The NamespacesRequest message allows querying for namespaces based on specific patterns in their names as well as their types.
*/
message NamespacesRequest {
  /*
  An optional pattern that can be used to filter the returned namespaces based on their names.
  For example, using a pattern like “user_*” might return all namespaces starting with “user_”.
  */
  optional string namespace_pattern = 1;
  // An optional type specifier that can be used to filter namespaces based on their type. This allows clients to request namespaces of a particular type.
  optional string namespace_type = 2;
}

/*
The EntitiesRequest message is meant for querying details about entities within a specific namespace, possibly using a pattern to narrow down the results.
*/
message EntitiesRequest {
  // The name of the namespace within which entities are to be searched.
  string namespace_name = 1;
  // An optional pattern for filtering the returned entities. This can help in narrowing down the list of entities based on a naming pattern or other criteria.
  optional string entity_pattern = 2;
}
